Extract caches implementation for use in client
It didn't belong in the plugin toolkit anyway.